docs/v0.2.0a42/_sources/reference/_autosummary/hpcflow.app.ElementActionRun.rst.txt
hpcflow.app.ElementActionRun
============================

.. currentmodule:: hpcflow.app

.. autoclass:: ElementActionRun
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ElementActionRun.compose_commands
      ~ElementActionRun.compose_source
      ~ElementActionRun.get
      ~ElementActionRun.get_EAR_dependencies
      ~ElementActionRun.get_IFG_input_values
      ~ElementActionRun.get_OFP_output_files
      ~ElementActionRun.get_data_idx
      ~ElementActionRun.get_environment
      ~ElementActionRun.get_input_dependencies
      ~ElementActionRun.get_input_values
      ~ElementActionRun.get_parameter_names
      ~ElementActionRun.get_parameter_sources
      ~ElementActionRun.get_resources
      ~ElementActionRun.get_template_resources
      ~ElementActionRun.write_source
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ElementActionRun.EAR_ID
      ~ElementActionRun.action
      ~ElementActionRun.app
      ~ElementActionRun.data_idx
      ~ElementActionRun.element
      ~ElementActionRun.element_action
      ~ElementActionRun.element_iteration
      ~ElementActionRun.end_time
      ~ElementActionRun.index
      ~ElementActionRun.input_files
      ~ElementActionRun.inputs
      ~ElementActionRun.metadata
      ~ElementActionRun.output_files
      ~ElementActionRun.outputs
      ~ElementActionRun.resources
      ~ElementActionRun.run_idx
      ~ElementActionRun.start_time
      ~ElementActionRun.submission_idx
      ~ElementActionRun.submission_status
      ~ElementActionRun.success
      ~ElementActionRun.task
      ~ElementActionRun.workflow
   
   